src/pages/ru/v1.25.0/product-analytics/data-management.mdx
---
title: "Управление данными"
metaTitle: "Управление данными - OpenReplay"
metaDescription: "Отслеживайте пользовательские события и свойства пользователей, чтобы расширить возможности продуктовой аналитики в OpenReplay."
---

Управление данными в OpenReplay позволяет отслеживать пользовательские события и свойства пользователей, чтобы расширить возможности продуктовой аналитики. На этой странице рассматриваются как интеграция SDK для отправки данных, так и пользовательский интерфейс для управления ими.

Полную документацию по SDK см. в [справочнике SDK Analytics](/sdk/analytics).

## Обзор событий

OpenReplay фиксирует два типа событий:

- **Автоматически фиксируемые события**: автоматически отслеживаемые взаимодействия, такие как просмотры страниц, клики и отправки форм
- **Пользовательские события**: события, специфичные для вашей предметной области, которые вы определяете сами, например «покупка завершена» или «функция включена»

Пользовательские события позволяют отслеживать конкретные действия пользователей, важные для вашего бизнеса, и использовать их в аналитических функциях, таких как [Тренды](/product-analytics/trends), [Воронки](/product-analytics/funnels) и [Пути](/product-analytics/journeys).

## Фиксация событий

Для отслеживания пользовательских событий используйте модуль аналитических событий SDK. Полную документацию по API см. в [справочнике SDK Events](/sdk/analytics/events).

### Базовый пример

```ts
// Track a simple event
tracker.analytics.events.sendEvent("Button Clicked", {
  button_text: "Start",
  page: "home",
})
```

### Супер-свойства

Супер-свойства — это постоянные пары ключ/значение, которые автоматически прикрепляются к каждому отслеживаемому событию:

```ts
// Set super properties that apply to all events
tracker.analytics.events.setProperty({
  app_version: "1.42.0",
  env: "prod",
})

// This event will include app_version and env automatically
tracker.analytics.events.sendEvent("Signup Started", {
  plan: "pro",
})
```

## Обогащение данных о пользователях

Свойства пользователей позволяют хранить атрибуты ваших пользователей для сегментации и анализа. Полную документацию по API см. в [справочнике SDK People](/sdk/analytics/people).

### Идентификация пользователей

```ts
// Identify the current user
tracker.analytics.people.identify("user_123")

// Set user properties
tracker.analytics.people.setProperties({
  email: "user@example.com",
  plan: "pro",
})
```

### Типы свойств

OpenReplay поддерживает несколько типов свойств:

| Тип | Описание | Примеры |
|------|-------------|----------|
| **Автоматически отслеживаемые** | Автоматически фиксируются SDK | Устройство, браузер, ОС, параметры UTM, реферер |
| **Специальные** | Специальные свойства с заданным поведением | `$user_id`, `$email`, `$name` |
| **Пользовательские** | Свойства, определяемые пользователем | `plan type`, `company`, `signup date` |

## Управление данными в пользовательском интерфейсе

OpenReplay предоставляет интерфейс управления данными для просмотра, фильтрации и организации ваших пользователей, событий и их соответствующих свойств.

### People

<img src="/data-management/people-page.png" alt="Страница событий" style={{ width: '700px', height: 'auto' }} />

Вкладка People предоставляет обзор ваших идентифицированных пользователей:

- Просматривайте пользователей и их свойства
- Выполняйте поиск по идентификатору пользователя или значениям свойств
- Просматривайте активность пользователя и историю сессий
- Получайте доступ к профилям отдельных пользователей

### Events

<img src="/data-management/events-page.png" alt="Страница событий" style={{ width: '700px', height: 'auto' }} />

Вкладка Events отображает все типы отслеживаемых событий в вашем проекте:

- Просматривайте и ищите события по имени
- Фильтруйте по типу события (автоматически фиксируемые или пользовательские)
- Редактируйте метаданные события (отображаемое имя, описание)
- Управляйте видимостью событий на дашбордах и в фильтрах

### Properties

<img src="/data-management/props-page.png" alt="Страница событий" style={{ width: '700px', height: 'auto' }} />

Вкладка Properties позволяет управлять как свойствами пользователей, так и свойствами событий:

- Переключайтесь между свойствами пользователей и свойствами событий
- Просматривайте типы свойств и распределения значений
- Редактируйте отображаемые имена свойств
- Управляйте видимостью свойств на дашбордах и в фильтрах 

### Activity

<img src="/data-management/activity-page.png" alt="Страница событий" style={{ width: '700px', height: 'auto' }} />

Вкладка Activity показывает поток событий в реальном времени:

- Отслеживайте события по мере их поступления
- Фильтруйте по типу события или пользователю
- Проверяйте, что события фиксируются корректно

### Псевдонимы, совместимые с Mixpanel

Все методы поддерживают слой совместимости, предоставленный для удобства:

```ts
tracker.analytics.people.set            // setProperties
tracker.analytics.people.set_once       // setPropertiesOnce
tracker.analytics.people.append         // appendValues
tracker.analytics.people.union          // appendUniqueValues
tracker.analytics.people.incrementBy    // increment
tracker.analytics.events.register       // setProperty
tracker.analytics.events.register_once  // setPropertiesOnce
tracker.analytics.events.unregister     // unsetProperties
tracker.analytics.events.track          // sendEvent
```

## Есть вопросы?

Если у вас возникнут какие-либо проблемы, присоединяйтесь к нашему [Slack](https://slack.openreplay.com) или загляните на наш [Форум](https://forum.openreplay.com) и получите помощь от нашего сообщества.
