src/pages/ru/v1.27.0/product-analytics/data-management.mdx
---
title: "Управление данными"
metaTitle: "Управление данными - OpenReplay"
metaDescription: "Отслеживайте пользовательские события и свойства пользователей, чтобы расширить возможности продуктовой аналитики в OpenReplay."
---

Управление данными в OpenReplay позволяет отслеживать пользовательские события и свойства пользователей, чтобы расширить возможности вашей продуктовой аналитики. На этой странице рассматриваются как интеграция SDK для отправки данных, так и пользовательский интерфейс для управления ими.

Полную документацию по SDK см. в [справочнике Analytics SDK](/sdk/analytics).

## Обзор событий

OpenReplay фиксирует два типа событий:

- **Автоматически фиксируемые события**: автоматически отслеживаемые взаимодействия, такие как просмотры страниц, клики и отправки форм
- **Пользовательские события**: специфичные для вашей предметной области события, которые вы определяете самостоятельно, например «покупка завершена» или «функция включена»

Пользовательские события позволяют отслеживать конкретные действия пользователей, важные для вашего бизнеса, и использовать их в аналитических функциях, таких как [Тренды](/product-analytics/trends), [Воронки](/product-analytics/funnels) и [Пути](/product-analytics/journeys).

## Фиксация событий

Чтобы отслеживать пользовательские события, используйте модуль аналитических событий SDK. Полную документацию по API см. в [справочнике Events SDK](/sdk/analytics/events).

### Базовый пример

```ts
// Track a simple event
tracker.analytics.events.sendEvent("Button Clicked", {
  button_text: "Start",
  page: "home",
})
```

### Супер-свойства

Супер-свойства — это постоянные пары ключ/значение, которые автоматически добавляются к каждому отслеживаемому событию:

```ts
// Set super properties that apply to all events
tracker.analytics.events.setProperty({
  app_version: "1.42.0",
  env: "prod",
})

// This event will include app_version and env automatically
tracker.analytics.events.sendEvent("Signup Started", {
  plan: "pro",
})
```

## Обогащение данных о пользователях

Свойства пользователей позволяют хранить атрибуты ваших пользователей для сегментации и анализа. Полную документацию по API см. в [справочнике People SDK](/sdk/analytics/people).

### Идентификация пользователей

```ts
// Identify the current user
tracker.analytics.people.identify("user_123")

// Set user properties
tracker.analytics.people.setProperties({
  email: "user@example.com",
  plan: "pro",
})
```

### Типы свойств

OpenReplay поддерживает несколько типов свойств:

| Тип | Описание | Примеры |
|------|-------------|----------|
| **Автоматически отслеживаемые** | Автоматически фиксируются SDK | Устройство, браузер, ОС, UTM-параметры, источник перехода |
| **Специальные** | Специальные свойства с заданным поведением | `$user_id`, `$email`, `$name` |
| **Пользовательские** | Свойства, определяемые пользователем | `plan type`, `company`, `signup date` |

## Управление данными в пользовательском интерфейсе

OpenReplay предоставляет интерфейс управления данными для просмотра, фильтрации и упорядочивания ваших пользователей, событий и их соответствующих свойств.

### Люди

<img src="/data-management/people-page.png" alt="Страница событий" style={{ width: '700px', height: 'auto' }} />

Вкладка «Люди» предоставляет представление ваших идентифицированных пользователей:

- Просмотр пользователей и их свойств
- Поиск по идентификатору пользователя или значениям свойств
- Просмотр активности пользователя и истории сессий
- Доступ к профилям отдельных пользователей

### События

<img src="/data-management/events-page.png" alt="Страница событий" style={{ width: '700px', height: 'auto' }} />

На вкладке «События» отображаются все типы отслеживаемых событий в вашем проекте:

- Просмотр и поиск событий по имени
- Фильтрация по типу события (автоматически фиксируемые или пользовательские)
- Редактирование метаданных события (отображаемое имя, описание)
- Управление видимостью события в дашбордах и фильтрах

### Свойства

<img src="/data-management/props-page.png" alt="Страница событий" style={{ width: '700px', height: 'auto' }} />

Вкладка «Свойства» позволяет управлять как свойствами пользователей, так и свойствами событий:

- Переключение между свойствами пользователей и свойствами событий
- Просмотр типов свойств и распределения значений
- Редактирование отображаемых имён свойств
- Управление видимостью свойств в дашбордах и фильтрах 

### Активность

<img src="/data-management/activity-page.png" alt="Страница событий" style={{ width: '700px', height: 'auto' }} />

На вкладке «Активность» отображается поток событий в реальном времени:

- Отслеживание событий по мере их поступления
- Фильтрация по типу события или пользователю
- Проверка того, что события фиксируются корректно

### Сегменты

Сегменты позволяют объединять несколько событий в единую многоразовую коллекцию с собственным именем и описанием. Вместо того чтобы каждый раз выбирать отдельные события, вы можете определить Сегмент один раз и использовать его во всём OpenReplay.

<img src="/data-management/segments-list.png" alt="Список сегментов" style={{ width: '700px', height: 'auto' }} />

Чтобы создать Сегмент:

1. Перейдите на вкладку **Segments** в разделе «Управление данными»
2. Нажмите **Create**
3. Измените имя и задайте видимость
4. Выберите события и фильтры для включения в коллекцию
5. Создайте Сегмент

После создания Сегменты можно использовать в:

- **Sessions** — фильтруйте сессии по Сегменту, аналогично сохранённому поиску, чтобы быстро находить нужную активность пользователей
- **Cards** — используйте Сегмент как фильтр в ваших карточках

<img src="/data-management/segments-search.png" alt="Использование Сегментов в поиске сессий" style={{ width: '700px', height: 'auto' }} />

### Функции

Функции позволяют визуально выбрать элемент в записи сессии и отметить его, чтобы затем легко отслеживать клики, повторно используя его в различных других частях приложения.

<img src="/data-management/features-create.png" alt="Создание функции" style={{ width: '700px', height: 'auto' }} />

Чтобы создать Функцию:

1. Воспроизведите запись, затем нажмите на вкладку **Tag** в правом верхнем углу
2. С помощью мыши выберите/отметьте визуальный элемент в записи. После выбора элемента его CSS-селектор будет заполнен автоматически. При необходимости вы можете его изменить.
3. Игнорируйте мёртвые клики (dead clicks) и «ярость кликов» (rage clicks), когда они возникают
4. Выберите область действия (отслеживать клики во всём приложении или только на странице, показанной в записи)
5. Сохраните Функцию

Вашими Функциями можно управлять в отдельном разделе:

<img src="/data-management/features-list.png" alt="Список функций" style={{ width: '700px', height: 'auto' }} />

После создания Функции можно использовать в:

- **Sessions** — фильтруйте сессии по Функции, аналогично сохранённому поиску, чтобы быстро находить нужную активность пользователей
- **Cards** — используйте Функцию как фильтр в ваших карточках

<img src="/data-management/features-search.png" alt="Использование Функций в поиске сессий" style={{ width: '700px', height: 'auto' }} />

### Псевдонимы, совместимые с Mixpanel

Все методы поддерживают предоставленный слой совместимости для удобства привыкания:

```ts
tracker.analytics.people.set            // setProperties
tracker.analytics.people.set_once       // setPropertiesOnce
tracker.analytics.people.append         // appendValues
tracker.analytics.people.union          // appendUniqueValues
tracker.analytics.people.incrementBy    // increment
tracker.analytics.events.register       // setProperty
tracker.analytics.events.register_once  // setPropertiesOnce
tracker.analytics.events.unregister     // unsetProperties
tracker.analytics.events.track          // sendEvent
```

## Остались вопросы?

Если вы столкнулись с какими-либо проблемами, присоединяйтесь к нашему [Slack](https://slack.openreplay.com) или загляните на наш [Форум](https://forum.openreplay.com) и получите помощь от нашего сообщества.
